# unifi-lab-kit

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml
.github/scripts/: secret_regression_scan.sh
.github/workflows/: ci.yml
_secrets/: README.md
archive/2026-03-03-initial-recovery/: README.md  add_dhcp_server11.py  add_dhcp_server11_v2.py  adopt_usg.py  audit_persistence.py  brute_all.py  check_conflict.py  check_conflict2.py  check_new.py  check_server6_ip.py  check_server6_via_nas.py  check_usg_web.sh  clean_test.py  deploy_keys_and_portfwd.py  deploy_ssh_key.py  diag2.sh  diag3.sh  diag4.sh  diagnose_network.sh  diagnose_server.sh  explore_from_nas.py  explore_from_server2.py  explore_v2.py  fast_identify.py  final_check.py  final_scan.py  fix_all_portforward.py  fix_all_v2.py  fix_and_verify.py  fix_controller_full.py  fix_controller_usg.py  fix_dhcp_and_status.py  fix_remaining.py  fix_server11.py  fix_server15.py  fix_server21.py  fix_server5.py  fix_server8.py  fix_usg.sh  fix_usg_and_dhcp.py  (+61 more)
configs/: config.gateway.json.example  smb.conf.template  ssh_config.example
docs/: NETWORK_TOPOLOGY.md  RUNBOOK.md  architecture.md
docs/adr/: 0001-edgeos-cli-over-controller.md  0002-native-samba-over-docker.md  0003-port-445-blocked-workarounds.md  0004-paramiko-over-ansible.md
inventory/: hosts.example.yml
scripts/: diagnose.sh  tcp_portscan.sh
src/mllab_net/: __init__.py  controller.py  controller_pwreset.py  nas_samba.py  scan.py  ssh_deploy.py  static_ip.py  usg.py  verify.py
src/unifi_lab_kit/: __init__.py  _ssh.py  config.py  controller.py  controller_pwreset.py  nas_samba.py  scan.py  ssh_deploy.py  static_ip.py  usg.py  verify.py
tests/: test_inventory.py  test_usg_command_sequence.py
